--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "dependencies": {
-    "electron-traywindow-positioner": "^1.1.1",
-    "ip": "^1.1.8",
-    "menubar": "^9.2.3",
-    "public-ip": "^6.0.1"
+    "ip": "1.1.8",
+    "os": "0.1.2"
   },
   "name": "cupcake",
   "description": "",
@@ -24,6 +22,6 @@
   },
   "homepage": "https://github.com/philecker/cupcake#readme",
   "devDependencies": {
-    "electron": "^21.4.4"
+    "electron": "21.4.4"
   }
 }
