--- a/package.json
+++ b/package.json
@@ -1,27 +1,41 @@
 {
+  "name": "cupcake-vite",
+  "version": "1.0.0",
+  "description": "An Electron application with React",
+  "main": "./out/main/index.js",
+  "author": "philecker.com",
+  "homepage": "https://www.electronjs.org",
+  "scripts": {
+    "format": "prettier --write .",
+    "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
+    "start": "xc",
+    "dev": "electron-vite dev",
+    "build": "electron-vite build",
+    "postinstall": "electron-builder install-app-deps",
+    "build:win": "npm run build && electron-builder --win --config",
+    "build:mac": "npm run build && electron-builder --mac --config",
+    "build:linux": "npm run build && electron-builder --linux --config"
+  },
   "dependencies": {
+    "@electron-toolkit/preload": "1.0.3",
+    "@electron-toolkit/utils": "1.0.2",
+    "electron-updater": "5.3.0",
     "ip": "1.1.8",
     "os": "0.1.2"
   },
-  "name": "cupcake",
-  "description": "",
-  "version": "1.0.0",
-  "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/philecker/cupcake.git"
-  },
-  "author": "Phil Ecker",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/philecker/cupcake/issues"
-  },
-  "homepage": "https://github.com/philecker/cupcake#readme",
   "devDependencies": {
-    "electron": "21.4.4"
+    "@electron/notarize": "1.2.3",
+    "@vitejs/plugin-react": "3.1.0",
+    "electron": "22.3.4",
+    "electron-builder": "23.6.0",
+    "electron-vite": "1.0.21",
+    "eslint": "8.36.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.32.2",
+    "prettier": "2.8.7",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "vite": "4.2.1"
   }
 }
