--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@electron-toolkit/utils": "1.0.2",
     "electron-updater": "5.3.0",
     "ip": "1.1.8",
-    "os": "0.1.2"
+    "os": "0.1.2",
+    "public-ip": "^6.0.1",
+    "store": "2.0.12"
   },
   "devDependencies": {
     "@electron/notarize": "1.2.3",
