--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cupcake-vite",
+  "name": "cupcake",
   "version": "1.0.0",
   "description": "An Electron application with React",
   "main": "./out/main/index.js",
