--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cupcake",
   "version": "1.0.0",
-  "description": "An Electron application with React",
+  "description": "An Electron application built with React & Vite for easy access to some useful network/system information.",
   "main": "./out/main/index.js",
   "author": "philecker.com",
   "homepage": "https://www.electronjs.org",
@@ -22,7 +22,6 @@
     "electron-updater": "5.3.0",
     "ip": "1.1.8",
     "os": "0.1.2",
-    "public-ip": "^6.0.1",
     "store": "2.0.12"
   },
   "devDependencies": {
